manifests/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-nodeport
  labels:
    app.kubernetes.io/name: web-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
  selector:
    app.kubernetes.io/name: web-app
